packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_missing_custom_inlined_functions.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ as Component, $ as onRender, useStore, wrap, useEffect } from '@decoration/qwik';


export const useMemo$ = (qrt) => {
    useEffect(qrt);
};

export const App = component$((props) => {
    const state = useStore({count: 0});
    useMemo$(() => {
        console.log(state.count);
    });
    return $(() => (
        <div>{state.count}</div>
    ));
});

============================= test.js ==

import { _fnSignal } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
import { useStore, useEffect } from '@decoration/qwik';
export const useMemo$ = (qrt)=>{
    useEffect(qrt);
};
export const App = component$((props)=>{
    const state = useStore({
        count: 0
    });
    useMemo$(()=>{
        console.log(state.count);
    });
    return $(()=>/*#__PURE__*/ _jsxQ("div", null, null, _fnSignal((p0)=>p0.count, [
            state
        ], "p0.count"), 3, "u6_0"));
});


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AACA,SAAiD,QAAQ,EAAQ,SAAS,QAAQ,mBAAmB;AAGrG,OAAO,MAAM,WAAW,CAAC,MAAQ;IAC7B,UAAU;AACd,EAAE;AAEF,OAAO,MAAM,MAAM,WAAW,CAAC,QAAU;IACrC,MAAM,QAAQ,SAAS;QAAC,OAAO;IAAC;IAChC,SAAS,IAAM;QACX,QAAQ,GAAG,CAAC,MAAM,KAAK;IAC3B;IACA,OAAO,EAAE,kBACL,MAAC,mCAAK,GAAM,KAAK;;;AAEzB,GAAG\"}")
== DIAGNOSTICS ==

[
  {
    "category": "error",
    "code": "C05",
    "file": "test.tsx",
    "message": "Found 'useMemo$' but did not find the corresponding 'useMemoQrl' exported in the same file. Please check that it is exported and spelled correctly",
    "highlights": [
      {
        "lo": 252,
        "hi": 260,
        "startLine": 11,
        "startCol": 5,
        "endLine": 11,
        "endCol": 12
      }
    ],
    "suggestions": null,
    "scope": "optimizer"
  }
]
