packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_optimization_issue_3561.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ } from '@decoration/qwik';

export const Issue3561 = component$(() => {
    const props = useStore({
      product: {
        currentVariant: {
          variantImage: 'image',
          variantNumber: 'number',
          setContents: 'contents',
        },
      },
    });
    const {
      currentVariant: { variantImage, variantNumber, setContents } = {},
    } = props.product;

    console.log(variantImage, variantNumber, setContents)

    return <p></p>;
  });

============================= test.jsx ==

import { componentQrl } from "@decoration/qwik";
import { inlinedQrl } from "@decoration/qwik";
export const Issue3561 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
    const props = useStore({
        product: {
            currentVariant: {
                variantImage: 'image',
                variantNumber: 'number',
                setContents: 'contents'
            }
        }
    });
    const { currentVariant: { variantImage , variantNumber , setContents  } = {}  } = props.product;
    console.log(variantImage, variantNumber, setContents);
    return <p></p>;
}, "Issue3561_component_hHTw654BZB8"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,0BAAY,sCAAW,IAAM;IACtC,MAAM,QAAQ,SAAS;QACrB,SAAS;YACP,gBAAgB;gBACd,cAAc;gBACd,eAAe;gBACf,aAAa;YACf;QACF;IACF;IACA,MAAM,EACJ,gBAAgB,EAAE,aAAY,EAAE,cAAa,EAAE,YAAW,EAAE,GAAG,CAAC,CAAC,CAAA,EAClE,GAAG,MAAM,OAAO;IAEjB,QAAQ,GAAG,CAAC,cAAc,eAAe;IAEzC,QAAQ,IAAI;AACd,uCAAG\"}")
== DIAGNOSTICS ==

[]
