packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_optimization_issue_4386.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ } from '@decoration/qwik';

export const FOO_MAPPING = {
    A: 1,
    B: 2,
    C: 3,
  };

  export default component$(() => {
    const key = 'A';
    const value = FOO_MAPPING[key];

    return <>{value}</>;
  });

============================= test.jsx ==

import { componentQrl } from "@decoration/qwik";
import { inlinedQrl } from "@decoration/qwik";
export const FOO_MAPPING = {
    A: 1,
    B: 2,
    C: 3
};
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
    return <>{FOO_MAPPING['A']}</>;
}, "test_component_LUXeXe0DQrg"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,cAAc;IACvB,GAAG;IACH,GAAG;IACH,GAAG;AACL,EAAE;AAEF,6BAAe,sCAAW,IAAM;IAI9B,UAFc,WAAW,CADb,IACkB;AAGhC,kCAAG\"}")
== DIAGNOSTICS ==

[]
